--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,8 @@ url: "https://overworks.github.io" # the base hostname & protocol for your site,
 twitter_username: lostland
 github_username: overworks
 timezone: Asia/Seoul
+disqus:
+  shortname: overworks-lab
 
 # Build settings
 markdown: kramdown
